--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@
 	</div>
 
 <div id="contBtns">
-  <button id="boton" class="miBtn btnHover mb-3">
-    <i class="zmdi zmdi-camera-party-mode" style="color: #333;"></i> 
-    Tomar Foto
-  </button>
-    &nbsp;&nbsp;
-  <button id="btn-front" class="miBtn btnHover">Cámara Frontal</button>
-    &nbsp;&nbsp;
     <button id="btnComenzarGrabacion" class="btnGrabar btnHover mb-3" style="background-color:#138496 !important;">
         <i class="zmdi zmdi-videocam zmdi-hc-lg" style="color: #333;"></i> 
         Grabar vídeo 
@@ -52,6 +45,12 @@
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.1/dist/html2canvas.min.js"></script>
 <script>
+  
+const constraints = {
+  video: {
+    facingMode: "environment" // Esta línea selecciona la cámara trasera
+  }
+};
 
     // Solicita acceso a la cámara
 navigator.mediaDevices.getUserMedia({
